Fixed Overflow layouting

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -29,7 +29,7 @@ ul{
 .content{
     height:100%;
     padding: 0px;
-    width: 100%;
+    width: 100px;
     margin: 0px;
 }
 
@@ -44,8 +44,9 @@ ul{
 }
 
 .dashboard{
-    margin-top: 0px;
+    /* margin-top: 0px; */
     height:100%;
+    margin: 0px;
 }
 
 .lds-ripple {
@@ -66,9 +67,11 @@ ul{
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 .lds-ripple div:nth-child(2) {
   animation-delay: -0.5s;
 }
+
 @keyframes lds-ripple {
   0% {
     top: 36px;
