--- a/src/app/pages/file-manager/file-manager.component.css
+++ b/src/app/pages/file-manager/file-manager.component.css
@@ -5,7 +5,7 @@
 .FMBody{
     /* margin: 20px; */
     overflow: auto;
-    height: calc(100vh - 278px);
+    height: calc(100vh - 262px);
 }
 
 .FMHeader{
